--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,8 @@ setw -g automatic-rename off
 setw -g allow-rename off
 
 # Mouse enabled
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
+
+# terminfo
+set -g  default-terminal            "tmux-256color"
+set -ga terminal-overrides          ",xterm-256color:Tc"
