Remove setoption for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
 # Sets the default shell to the one I am currently using
-set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+# set-option -g default-command "which reattach-to-user-namespace &> /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 # Reloads tmux configuration
 unbind r
