download this repo on distrobox init

--- a/distrobox.ini
+++ b/distrobox.ini
@@ -6,3 +6,5 @@ pull=true
 root=false
 replace=true
 volume="/home/linuxbrew:/home/linuxbrew"
+init_hooks=mkdir -p "${HOME}/workspace"
+init_hooks=git -C ${HOME}/workspace/dotfiles pull || git clone git@github.com:gbagnoli/dotfiles.git ${HOME}/workspace/dotfiles
