Make sure brew-update and brew-cleanup support profile. Do not have brew manage flatpaks

--- a/brew/Brewfile.desktop
+++ b/brew/Brewfile.desktop
@@ -1,5 +1,5 @@
 tap "charmbracelet/tap"
-tap "gbagnoli/tzbuddy", "git@github.com:gbagnoli/homebrew-tzbuddy.git"
+tap "gbagnoli/tzbuddy"
 tap "mistertea/et"
 brew "atuin"
 brew "autoenv"
@@ -51,69 +51,3 @@ brew "yq"
 brew "zoxide"
 brew "gbagnoli/tzbuddy/tzbuddy"
 cask "claude-code"
-cargo "cargo-audit"
-cargo "cargo-release"
-cargo "cargo-update"
-cargo "topgrade"
-flatpak "app.devsuite.Ptyxis"
-flatpak "ca.edestcroix.Recordbox"
-flatpak "com.discordapp.Discord"
-flatpak "com.github.PintaProject.Pinta"
-flatpak "com.github.iwalton3.jellyfin-media-player"
-flatpak "com.github.rafostar.Clapper"
-flatpak "com.github.tchx84.Flatseal"
-flatpak "com.github.xournalpp.xournalpp"
-flatpak "com.github.zocker_160.SyncThingy"
-flatpak "com.google.Chrome"
-flatpak "com.mattjakeman.ExtensionManager"
-flatpak "com.ranfdev.DistroShelf"
-flatpak "com.spotify.Client"
-flatpak "com.vscodium.codium"
-flatpak "info.portfolio_performance.PortfolioPerformance"
-flatpak "io.github.dvlv.boxbuddyrs"
-flatpak "io.github.flattool.Ignition"
-flatpak "io.github.flattool.Warehouse"
-flatpak "io.github.getnf.embellish"
-flatpak "io.github.kolunmi.Bazaar"
-flatpak "io.github.nokse22.high-tide"
-flatpak "io.github.shiiion.primehack"
-flatpak "io.gitlab.adhami3310.Impression"
-flatpak "io.missioncenter.MissionCenter"
-flatpak "it.mijorus.gearlever"
-flatpak "nl.sarine.gpx-viewer"
-flatpak "org.electrum.electrum"
-flatpak "org.fedoraproject.MediaWriter"
-flatpak "org.gimp.GIMP"
-flatpak "org.gnome.Calculator"
-flatpak "org.gnome.Calendar"
-flatpak "org.gnome.Characters"
-flatpak "org.gnome.Connections"
-flatpak "org.gnome.Contacts"
-flatpak "org.gnome.Epiphany"
-flatpak "org.gnome.FileRoller"
-flatpak "org.gnome.Firmware"
-flatpak "org.gnome.Logs"
-flatpak "org.gnome.Loupe"
-flatpak "org.gnome.Maps"
-flatpak "org.gnome.Music"
-flatpak "org.gnome.NautilusPreviewer"
-flatpak "org.gnome.Papers"
-flatpak "org.gnome.SimpleScan"
-flatpak "org.gnome.TextEditor"
-flatpak "org.gnome.Weather"
-flatpak "org.gnome.baobab"
-flatpak "org.gnome.clocks"
-flatpak "org.gnome.font-viewer"
-flatpak "org.inkscape.Inkscape"
-flatpak "org.kde.kgeotag"
-flatpak "org.keepassxc.KeePassXC"
-flatpak "org.mozilla.firefox"
-flatpak "org.musicbrainz.Picard"
-flatpak "org.raspberrypi.rpi-imager"
-flatpak "org.signal.Signal"
-flatpak "org.twinery.Twine"
-flatpak "org.videolan.VLC"
-flatpak "org.virt_manager.virt-manager"
-flatpak "page.tesk.Refine"
-flatpak "us.zoom.Zoom"
-flatpak "xyz.z3ntu.razergenie"
